[gd_scene load_steps=23 format=3 uid="uid://b63eyc2tga66h"]

[ext_resource type="Texture2D" uid="uid://d1m2weoqnhb28" path="res://menus/graphics/decal_mainmenu.png" id="1_go4n1"]
[ext_resource type="Script" path="res://menus/title.gd" id="1_oug86"]
[ext_resource type="Texture2D" uid="uid://c6b6ow61u4iiy" path="res://menus/graphics/logo.png" id="2_t5mr7"]
[ext_resource type="FontFile" uid="uid://dkraie6pjj6a" path="res://menus/fonts/sm64ds_title.ttf" id="3_k5c73"]
[ext_resource type="StyleBox" uid="uid://djru108lp243r" path="res://menus/theme_resources/btn_wooden.tres" id="3_q26ru"]
[ext_resource type="StyleBox" uid="uid://e7dtuud8vmo1" path="res://menus/theme_resources/btn_wooden_pressed.tres" id="4_4m0wl"]
[ext_resource type="Texture2D" uid="uid://bbpohplql4nqa" path="res://menus/graphics/hint_vs.png" id="4_pn2d3"]
[ext_resource type="AudioStream" uid="uid://de1vfgiie4dny" path="res://audio/music/title.ogg" id="5_8n2ij"]
[ext_resource type="StyleBox" uid="uid://dhjchsrvw3aht" path="res://menus/theme_resources/btn_golden_disabled.tres" id="8_7a73e"]
[ext_resource type="StyleBox" uid="uid://df317l7ifj10v" path="res://menus/theme_resources/btn_golden.tres" id="9_5hc84"]

[sub_resource type="FontVariation" id="FontVariation_5motk"]
base_font = ExtResource("3_k5c73")
spacing_glyph = 3

[sub_resource type="FontVariation" id="FontVariation_q6w8o"]
spacing_space = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c12h"]

[sub_resource type="ButtonGroup" id="ButtonGroup_dmuds"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pes74"]

[sub_resource type="ButtonGroup" id="ButtonGroup_gngym"]

[sub_resource type="Animation" id="Animation_n7htj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 206)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BtnVS:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(843, 218)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BtnConfig:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(843, 330)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BtnExit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(843, 442)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BtnVS:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ContainerSettings:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1200, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ContainerSettings:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 350)]
}

[sub_resource type="Animation" id="Animation_v26ot"]
resource_name = "close_settings"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContainerSettings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(598, 0), Vector2(1200, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BtnVS:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(843, -308), Vector2(843, 218)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BtnConfig:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(843, -196), Vector2(843, 330)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BtnExit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(843, -84), Vector2(843, 442)]
}

[sub_resource type="Animation" id="Animation_6yfw2"]
resource_name = "idle"
length = 8.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BtnVS:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.139626, -0.122173, 0.10472, -0.10472, 0.0872665, -0.0523599, 0.0523599, -0.0523599, 0.0523599, -0.0523599, 0.0349066, -0.0349066, 0.0174533, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BtnConfig:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.139626, -0.122173, 0.10472, -0.10472, 0.0872665, -0.0523599, 0.0523599, -0.0523599, 0.0523599, -0.0523599, 0.0349066, -0.0349066, 0.0174533, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BtnExit:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.139626, -0.122173, 0.10472, -0.10472, 0.0872665, -0.0523599, 0.0523599, -0.0523599, 0.0523599, -0.0523599, 0.0349066, -0.0349066, 0.0174533, 0.0]
}

[sub_resource type="Animation" id="Animation_cos2o"]
resource_name = "intro"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3),
"transitions": PackedFloat32Array(0.5, 1, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5),
"update": 0,
"values": [Vector2(64, -296), Vector2(64, -296), Vector2(64, 248), Vector2(64, 168), Vector2(64, 234), Vector2(64, 182), Vector2(64, 234), Vector2(64, 182), Vector2(64, 222), Vector2(64, 196), Vector2(64, 212), Vector2(64, 203), Vector2(64, 206)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BtnVS:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 1.5),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1264, 218), Vector2(843, 218)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BtnConfig:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.35, 1.55),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1264, 330), Vector2(843, 330)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BtnExit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.4, 1.6),
"transitions": PackedFloat32Array(0.2, 1),
"update": 0,
"values": [Vector2(1264, 442), Vector2(843, 442)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ContainerSettings:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 350)]
}

[sub_resource type="Animation" id="Animation_kk4nu"]
resource_name = "open_settings"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContainerSettings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.15, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1200, 0), Vector2(598, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BtnVS:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(843, 218), Vector2(843, -308)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BtnConfig:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(843, 330), Vector2(843, -196)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BtnExit:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(843, 442), Vector2(843, -84)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhyjn"]
_data = {
"RESET": SubResource("Animation_n7htj"),
"close_settings": SubResource("Animation_v26ot"),
"idle": SubResource("Animation_6yfw2"),
"intro": SubResource("Animation_cos2o"),
"open_settings": SubResource("Animation_kk4nu")
}

[node name="Title" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oug86")
metadata/_edit_horizontal_guides_ = [350.0]

[node name="BG" type="TextureRect" parent="."]
light_mask = 0
texture_filter = 2
texture_repeat = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_go4n1")
expand_mode = 1
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 206.0
offset_right = 598.0
offset_bottom = 493.999
grow_vertical = 2
pivot_offset = Vector2(267, 144)
texture = ExtResource("2_t5mr7")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="Logo"]
visible = false
layout_mode = 0
offset_left = 372.0
offset_top = 222.0
offset_right = 500.0
offset_bottom = 286.0
texture = ExtResource("4_pn2d3")

[node name="BtnVS" type="Button" parent="."]
self_modulate = Color(1, 0.376471, 0.184314, 1)
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
offset_left = 843.0
offset_top = 218.0
offset_right = 963.0
offset_bottom = 258.0
scale = Vector2(2, 2)
pivot_offset = Vector2(60, 20)
size_flags_horizontal = 4
focus_mode = 0
theme_override_styles/normal = ExtResource("3_q26ru")
theme_override_styles/hover = ExtResource("3_q26ru")
theme_override_styles/pressed = ExtResource("4_4m0wl")
action_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="BtnVS"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -9.0
offset_right = 35.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35.5, 9)
theme_override_colors/font_color = Color(0.815686, 0.309804, 0.152941, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.0666667, 0.0196078, 1)
theme_override_colors/font_outline_color = Color(0.223529, 0.0666667, 0.0196078, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -1
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_5motk")
theme_override_font_sizes/font_size = 16
text = "Versus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnConfig" type="Button" parent="."]
self_modulate = Color(0.627451, 0.494118, 1, 1)
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
offset_left = 843.0
offset_top = 330.0
offset_right = 963.0
offset_bottom = 370.0
scale = Vector2(2, 2)
pivot_offset = Vector2(60, 20)
size_flags_horizontal = 4
focus_mode = 0
theme_override_styles/normal = ExtResource("3_q26ru")
theme_override_styles/hover = ExtResource("3_q26ru")
theme_override_styles/pressed = ExtResource("4_4m0wl")
action_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="BtnConfig"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -9.0
offset_right = 42.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 9)
theme_override_colors/font_color = Color(0.541176, 0.443137, 0.823529, 1)
theme_override_colors/font_shadow_color = Color(0.235294, 0.121569, 0.313726, 1)
theme_override_colors/font_outline_color = Color(0.235294, 0.121569, 0.313726, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -1
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_5motk")
theme_override_font_sizes/font_size = 16
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnExit" type="Button" parent="."]
self_modulate = Color(0.639216, 0.768627, 0.207843, 1)
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
offset_left = 843.0
offset_top = 442.0
offset_right = 963.0
offset_bottom = 482.0
scale = Vector2(2, 2)
pivot_offset = Vector2(60, 20)
size_flags_horizontal = 4
focus_mode = 0
theme_override_styles/normal = ExtResource("3_q26ru")
theme_override_styles/hover = ExtResource("3_q26ru")
theme_override_styles/pressed = ExtResource("4_4m0wl")
action_mode = 0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="BtnExit"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -9.0
offset_right = 25.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25.5, 9)
theme_override_colors/font_color = Color(0.52549, 0.635294, 0.172549, 1)
theme_override_colors/font_shadow_color = Color(0.188235, 0.235294, 0.0431373, 1)
theme_override_colors/font_outline_color = Color(0.188235, 0.235294, 0.0431373, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -1
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_5motk")
theme_override_font_sizes/font_size = 16
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContainerSettings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1200.0
offset_right = 1500.0
offset_bottom = 350.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
alignment = 1

[node name="Label" type="Label" parent="ContainerSettings"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_q6w8o")
theme_override_font_sizes/font_size = 8
text = "Setting 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ContainerSettings"]
visible = false
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Button2" type="Button" parent="ContainerSettings/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.254902, 0, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("8_7a73e")
theme_override_styles/hover = ExtResource("9_5hc84")
theme_override_styles/pressed = ExtResource("9_5hc84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c12h")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_dmuds")
text = "OFF"

[node name="Button" type="Button" parent="ContainerSettings/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.254902, 0, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("8_7a73e")
theme_override_styles/hover = ExtResource("9_5hc84")
theme_override_styles/pressed = ExtResource("9_5hc84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c12h")
toggle_mode = true
button_pressed = true
action_mode = 0
button_group = SubResource("ButtonGroup_dmuds")
text = "ON"

[node name="HSeparator" type="HSeparator" parent="ContainerSettings"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_pes74")

[node name="Label2" type="Label" parent="ContainerSettings"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = SubResource("FontVariation_q6w8o")
theme_override_font_sizes/font_size = 8
text = "Graphical Effects"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ContainerSettings"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button1" type="Button" parent="ContainerSettings/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "Half 3D resolution
and basic lighting."
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.254902, 0, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("8_7a73e")
theme_override_styles/hover = ExtResource("9_5hc84")
theme_override_styles/pressed = ExtResource("9_5hc84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c12h")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_gngym")
text = "LOW"

[node name="Button2" type="Button" parent="ContainerSettings/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "Average looks but
decent performance."
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.254902, 0, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("8_7a73e")
theme_override_styles/hover = ExtResource("9_5hc84")
theme_override_styles/pressed = ExtResource("9_5hc84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c12h")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_gngym")
text = "MEDIUM"

[node name="Button3" type="Button" parent="ContainerSettings/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "Fancy illumination
and post-processing."
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.254902, 0, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("8_7a73e")
theme_override_styles/hover = ExtResource("9_5hc84")
theme_override_styles/pressed = ExtResource("9_5hc84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c12h")
toggle_mode = true
button_pressed = true
action_mode = 0
button_group = SubResource("ButtonGroup_gngym")
text = "HIGH"

[node name="HSeparator2" type="HSeparator" parent="ContainerSettings"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_pes74")

[node name="BtnSettingsBack" type="Button" parent="ContainerSettings"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.254902, 0, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.0941176, 0, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = ExtResource("8_7a73e")
theme_override_styles/hover = ExtResource("9_5hc84")
theme_override_styles/pressed = ExtResource("9_5hc84")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3c12h")
action_mode = 0
text = "BACK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xhyjn")
}
autoplay = "intro"
next/close_settings = &"idle"
next/intro = &"idle"

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_8n2ij")
autoplay = true
bus = &"FadeableMusic"

[node name="AudioSFX" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="pressed" from="BtnVS" to="." method="_on_btn_vs_pressed"]
[connection signal="pressed" from="BtnConfig" to="." method="_on_btn_config_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="ContainerSettings/HBoxContainer2/Button1" to="." method="_on_settings_graphics_changed" binds= [0]]
[connection signal="pressed" from="ContainerSettings/HBoxContainer2/Button2" to="." method="_on_settings_graphics_changed" binds= [1]]
[connection signal="pressed" from="ContainerSettings/HBoxContainer2/Button3" to="." method="_on_settings_graphics_changed" binds= [2]]
[connection signal="pressed" from="ContainerSettings/BtnSettingsBack" to="." method="_on_btn_settings_back_pressed"]
